--- a/styles.css
+++ b/styles.css
@@ -70,3 +70,10 @@ h4 {
     background-color: lightgray;
     border-radius: 8px;
 }
+
+.vertical-line {
+    border-left: 2px solid #bbb;
+    height: 20px;
+    display: inline-flex;
+    margin: 0 10px;
+}
