--- a/styles.css
+++ b/styles.css
@@ -77,3 +77,17 @@ h4 {
     display: inline-flex;
     margin: 0 10px;
 }
+
+.vertical-line-two {
+    border-left: 2px solid black;
+    height: 20px;
+    display: inline-flex;
+    margin: 0 10px;
+}
+
+button {
+    background-color: #D76239;
+    color: white;
+    border: #D76239;
+    border-radius: 8px;
+}
