Aligned Contact info in Footer

--- a/styles.css
+++ b/styles.css
@@ -83,11 +83,19 @@ img {
     background-color: var(--box);
 }
 
-Footer {
+footer {
     background-color: #D76239;
     width: 83em;
     height: 10em;
     border-radius: 24px;
+    text-align: start;
+    display: inline-block;
+    padding-left: 30px;
+    padding-bottom: 5px;
+}
+
+.message {
+    color: var(--box);
 }
 
 .Contact {
@@ -126,4 +134,8 @@ button {
     color: white;
     border: #D76239;
     border-radius: 8px;
+}
+
+.Contact {
+    color: #bbb;
 }
