--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@ img {
       margin: 0;
 }
 
+ /* Skills Section*/
 .Skills {
     background-color: var(--box);
     width: 44em;
@@ -59,6 +60,14 @@ img {
     padding: 20px;
     margin: 30px;
     border-radius: 24px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.Skills > ul {
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
 }
 
 .Projects {
