--- a/styles.css
+++ b/styles.css
@@ -61,21 +61,22 @@ img {
     margin: 30px;
     border-radius: 24px;
     display: inline-block;
-    flex-wrap: wrap;
+    justify-content:space-between;
 }
 
 .Skills > ul {
       list-style-type: none;
-      padding: 0;
-      margin: 0;
+      padding: 20px;
+      margin: 20px;
       border: 5px solid black;
 }
  /* Skills Button */
 button > .Skills {
     background-color: var(--blue-white);
     color: black;
-    border: #D76239;
-    border-radius: 8px;
+    border: 2px solid var(--blue-white);
+    border-radius: 16px;
+    margin: 20px;
 }
 
 .Projects {
@@ -110,6 +111,8 @@ button > .Skills {
     display: flex;
     padding-left: 20px;
     margin-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .Education-Block-One-Left {
@@ -128,6 +131,8 @@ button > .Skills {
     display: flex;
     padding-left: 20px;
     margin-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .Education-Block-Two-Left {
@@ -146,6 +151,8 @@ button > .Skills {
     display: flex;
     padding-left: 20px;
     margin-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .Education-Block-Three-Left {
@@ -194,6 +201,8 @@ button > .Skills {
     display: flex;
     padding-left: 20px;
     margin-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .Experience-Block-One-Left {
@@ -212,6 +221,8 @@ button > .Skills {
     display: flex;
     padding-left: 20px;
     margin-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .Experience-Block-Two-Left {
@@ -230,6 +241,8 @@ button > .Skills {
     display: flex;
     padding-left: 20px;
     margin-bottom: 0px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .Experience-Block-Three-Left {
@@ -295,3 +308,5 @@ h4 {
 .Contact {
     color: #bbb;
 }
+
+/* PREP Space for my Projects styling */
