--- a/styles.css
+++ b/styles.css
@@ -254,6 +254,9 @@ body {
     background-color: var(--pale-pill);
     border-radius: 8px;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 2em;
 }
 
 img {
