--- a/styles.css
+++ b/styles.css
@@ -259,6 +259,11 @@ body {
     gap: 2em;
 }
 
+.T {
+    padding-top: 30px;
+    text-align: center;
+}
+
 img {
     width: 5em;
     height: 5em;
