--- a/styles.css
+++ b/styles.css
@@ -85,16 +85,13 @@ header {
     /*padding-left: 30px;
     padding-top: 30px;*/
     padding: 1.75em 2.5625em;
+    margin: 30px;
 }
 
-/*.Proficiency > ul {
-      list-style-type: none;
-}*/                               /* DELETE */
-
-/*.balance {
+.balance {
     display: flex;
     flex-direction: column;
-}*/
+}
 
 .balance > ul {
       list-style-type: none;
@@ -160,6 +157,13 @@ header {
     justify-content: space-evenly;
     gap: 2em;
 }
+
+/* section-one for Proficiency and Skills */
+.section-one {
+    display: flex;
+    justify-self: center;
+}
+
 
 /* Projects Section */
 .Projects {
