--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ header {
     /*padding-left: 30px;
     padding-top: 30px;*/
     padding: 1.75em 2.5625em;
-    margin: 30px;
+    margin: 30px;                     /* Aligned margin to same, as in Skills */
 }
 
 .balance {
@@ -172,6 +172,7 @@ header {
     width: 82.38em;
     height: 47.193125em;
     border-radius: 1.815em;
+    justify-self: center;
 }
 
 .projected > * {flex: 1;}
@@ -343,6 +344,12 @@ header {
     border-radius: 8px;
 }
 
+/* section-two for Education and Tools */
+.section-two {
+    display: flex;
+    justify-self: center;
+}
+
 /* Experience Section */
 
 .Experience {
@@ -350,6 +357,7 @@ header {
     height: 40em;
     border-radius: 1.815em;
     background-color: var(--box);
+    justify-self: center;
 }
 
 /* Experience Blocks Section */
@@ -442,6 +450,7 @@ footer {
     /*padding-left: 30px;
     padding-bottom: 5px;*/
     padding: 1.815em;
+    justify-self: center;
 }
 
 .message {
