--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ header {
     margin: 30px;*/
     border-radius: 24px;
     justify-self: center;
+    margin-top: 4em;
 }
 
 .intro {
@@ -348,6 +349,7 @@ header {
 .section-two {
     display: flex;
     justify-self: center;
+    margin-top: 3em;
 }
 
 /* Experience Section */
@@ -358,6 +360,7 @@ header {
     border-radius: 1.815em;
     background-color: var(--box);
     justify-self: center;
+    margin-top: 3em;
 }
 
 /* Experience Blocks Section */
@@ -446,11 +449,14 @@ footer {
     height: 9.875em;
     border-radius: 1.815em;
     text-align: start;
-    display: inline-block;
+    display: flex;   /* previously display: inline-block */
+    flex-direction: column;  /* flex addition */
     /*padding-left: 30px;
     padding-bottom: 5px;*/
     padding: 1.815em;
     justify-self: center;
+    margin-top: 3em;
+    margin-bottom: 3em;
 }
 
 .message {
