--- a/styles.css
+++ b/styles.css
@@ -247,7 +247,7 @@ header {
     color: var(--dark);
     background-color: var(--box);
     border-radius: 1.815em;
-    margin-right: 1.6875em;
+    margin-right: 1.6875em;          /* Matched margin-right of .Me (my profile picture) */
 }
 
 /* Education Blocks Section */
@@ -495,3 +495,41 @@ h4 {
 }
 
 /* End of my styling and editing */
+
+
+/* Media Queries for small screen size */
+@media (max-width: 640px) {
+    body {
+        display: grid;
+        grid-column: 1fr;
+    }
+    header {
+        display: flex;
+        width: 80%;
+        /*flex-direction: column;*/
+        /*align-items: center;*/
+    }
+    .section-one {
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+    }
+    .section-two {
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+    }
+    .Tools {
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+    }
+    .Proficiency,
+    .Skills,
+    .Projects,
+    .Education,
+    .Experience,
+    footer {
+        width: 80%;
+    }
+}
