Added Proficiency line colours

--- a/styles.css
+++ b/styles.css
@@ -104,8 +104,8 @@ header {
 }
 
 .line {
-    border: 10px solid #2E6E5B;
-    background: #2E6E5B;
+    border: 10px solid #396B5E;
+    background: #396B5E;
     border-radius: 0.5em;
     margin: 2px;
 }
