Got Education and Tools to better expand for mobile

--- a/styles.css
+++ b/styles.css
@@ -601,4 +601,8 @@ footer {
         display: flex;
         /*flex-direction: column;*/ /* delete */
     }
+    .Education,
+    .Tools {
+        width: 100%;
+    }
 }
